# counter-news

./: .gitignore  pyproject.toml
.build/: on-create.sh  on-start.sh
.config/: config.json
src/lib/utils/: config.py  data_loaders.py  env_checker.py  helper_functions.py  path_finder.py  url_parsers.py
src/lib/utils/constants/: __init__.py  cameo_country_codes.tsv  mappers.py
src/notebooks/: deduplication.ipynb  docs_preprocessing.ipynb  events_preprocessing.ipynb  exploration.ipynb  scoping.ipynb  scraping.ipynb
