[tool.poetry]
name = "news-recommender"
version = "0.1.0"
description = ""
authors = ["hanceevilla <hancee@importgenius.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.4.1.post1"
newspaper3k = "^0.2.8"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
uuid = "^1.30"
splink = "^3.9.14"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
