[tool.poetry]
name = "counter-news"
version = "0.1.0"
description = "Alternative news story recommender"
authors = ["Hancee V <hmvilla@up.edu.ph>"]
license = "\"MIT\""
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
