[tool.poetry]
name = "counter-news"
version = "0.1.0"
description = "Alternative news story recommender"
authors = ["Hancee V <hmvilla@up.edu.ph>"]
license = "\"MIT\""
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^6.29.4"
numpy = "^1.26.4"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
uuid = "^1.30"
newspaper3k = "^0.2.8"
beautifulsoup4 = "^4.12.3"
scipy = "^1.12.0"
requests = "^2.31.0"
jupyter = "^1.0.0"
statsmodels = "^0.14.1"
nltk = "^3.8.1"
fuzzywuzzy = "^0.18.0"
scikit-learn = "^1.4.1.post1"
duckdb = "^0.10.1"
splink = "^3.9.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
